--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfRpNY8b4at0EMbJprWR77k2_Ex-7OkUGZgr1LxKRIi7TE9ag/viewform?pli=1" 
      target="_blank" class="btn btn-formulaire">
-     <span style="font-size:1.2rem; margin-right:4px;">>></span> Remplir le formulaire
+      Remplir le formulaire 
   </a>
 </header>
 
